--- a/ablquental.html
+++ b/ablquental.html
@@ -65,7 +65,7 @@
                             <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
                         <a class="profl_tbox1a" href="bein_proj.html">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/wec/3.bein/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/wec/3.bein/capa.jpg)"></div>
                             <div class="profl_ttitl">BE-IN</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
