--- a/antsantiago.html
+++ b/antsantiago.html
@@ -60,19 +60,19 @@
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
                         <a class="profl_tbox1a" href="walkotmoon_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/ttmab/1.r1r2.antoniosantiago/r1/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/ttmab/1.r1r2.antoniosantiago/r1/capa.jpg)"></div>
                             <div class="profl_ttitl">Walk on the Moon</div>
                             <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
                         <a class="profl_tbox1a" href="uumoon_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/ttmab/1.r1r2.antoniosantiago/r2/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/ttmab/1.r1r2.antoniosantiago/r2/capa.jpg)"></div>
                             <div class="profl_ttitl">USSR, USA and the Moon</div>
                             <div class="profl_ttxt">Cartazes</div>
                         </a>
                     </div>
                     <div class="profl_tfence1">
                         <a class="profl_tbox2b" href="bein_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/TOTIDO/wec/3.bein/capa.jpg)"></div>
+                        <div class="profl_timg2" style="background-image: url(css/img/totido/wec/3.bein/capa.jpg)"></div>
                             <div class="profl_ttitl">BE-IN</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
