--- a/beasapata.html
+++ b/beasapata.html
@@ -60,19 +60,19 @@
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
                         <a class="profl_tbox1a" href="explcont_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/mbp/9.explicitcontent/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/mbp/9.explicitcontent/capa.jpg)"></div>
                             <div class="profl_ttitl">Explicit Content</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
                         <a class="profl_tbox1a" href="ichbeber_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/gf/1.r1r2.beatrizsapata/r1/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/gf/1.r1r2.beatrizsapata/r1/capa.jpg)"></div>
                             <div class="profl_ttitl">Ich Bin Ein Berliner</div>
                             <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
                     </div>
                     <div class="profl_tfence1">
                         <a class="profl_tbox2b" href="cryfrdm_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/TOTIDO/gf/1.r1r2.beatrizsapata/r2/capa.jpg)"></div>
+                        <div class="profl_timg2" style="background-image: url(css/img/totido/gf/1.r1r2.beatrizsapata/r2/capa.jpg)"></div>
                             <div class="profl_ttitl">A Cry For Freedom</div>
                             <div class="profl_ttxt">Cartazes</div>
                         </a>
