--- a/carlcouto.html
+++ b/carlcouto.html
@@ -65,14 +65,14 @@
                             <div class="profl_ttxt">Cartazes</div>
                         </a>
                         <a class="profl_tbox1a" href="laplage_carlcouto_proj.html"target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/m68/2.r1.carolinacouto/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/m68/2.r1.carolinacouto/capa.jpg)"></div>
                             <div class="profl_ttitl">Sous les pavés, la plage!</div>
                             <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
                     </div>
                     <div class="profl_tfence1">
                         <a class="profl_tbox2b" href="aura_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/TOTIDO/mbp/11.aura/capa.jpg)"></div>
+                        <div class="profl_timg2" style="background-image: url(css/img/totido/mbp/11.aura/capa.jpg)"></div>
                             <div class="profl_ttitl">Aura: ecos de<br>r-evolução</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
