--- a/davsantos.html
+++ b/davsantos.html
@@ -60,19 +60,19 @@
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
                         <a class="profl_tbox1a" href="lib_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/wl/2.lib/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/wl/2.lib/capa.jpg)"></div>
                             <div class="profl_ttitl">Lib</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
                         <a class="profl_tbox1a" href="teardtw_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/gf/3.r1r2.davidsantos/r1/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/gf/3.r1r2.davidsantos/r1/capa.jpg)"></div>
                             <div class="profl_ttitl">Tear down this wall</div>
                             <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
                     </div>
                     <div class="profl_tfence1">
                         <a class="profl_tbox2b" href="wall_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/TOTIDO/gf/3.r1r2.davidsantos/r2/capa.jpg)"></div>
+                        <div class="profl_timg2" style="background-image: url(css/img/totido/gf/3.r1r2.davidsantos/r2/capa.jpg)"></div>
                             <div class="profl_ttitl">Wall</div>
                             <div class="profl_ttxt">Cartazes</div>
                         </a>
