--- a/insferreira.html
+++ b/insferreira.html
@@ -72,7 +72,7 @@
                     </div>
                     <div class="profl_tfence1">
                         <a class="profl_tbox2b" href="contnm_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/TOTIDO/wec/2.continuum/capa.jpg)"></div>
+                        <div class="profl_timg2" style="background-image: url(css/img/totido/wec/2.continuum/capa.jpg)"></div>
                             <div class="profl_ttitl">Continuum</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
