--- a/jovieira.html
+++ b/jovieira.html
@@ -60,7 +60,7 @@
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
                         <a class="profl_tbox1a" href="explcont_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/mbp/9.explicitcontent/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/mbp/9.explicitcontent/capa.jpg)"></div>
                             <div class="profl_ttitl">Explicit Content</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
