--- a/kevferreira.html
+++ b/kevferreira.html
@@ -60,12 +60,12 @@
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
                         <a class="profl_tbox1a" href="lib_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/wl/2.lib/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/wl/2.lib/capa.jpg)"></div>
                             <div class="profl_ttitl">Lib</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
                         <a class="profl_tbox1a" href="laplage_kevferreira_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/m68/1.r2.kevin/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/m68/1.r2.kevin/capa.jpg)"></div>
                             <div class="profl_ttitl">Sous les pavés, la plage!</div>
                             <div class="profl_ttxt">Cartazes</div>
                         </a>
