--- a/leocoelho.html
+++ b/leocoelho.html
@@ -60,19 +60,19 @@
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
                         <a class="profl_tbox1a" href="unarchive_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/wl/5.unarchive/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/wl/5.unarchive/capa.jpg)"></div>
                             <div class="profl_ttitl">Un Archive</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
                         <a class="profl_tbox1a" href="twec60_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/wec/1.r1.leonorcoelho/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/wec/1.r1.leonorcoelho/capa.jpg)"></div>
                             <div class="profl_ttitl">The Whole Earth Catalogue<br><p style="font-size: 80%;margin-bottom: 0;">a.k.a the 60’s bible</p></div>
                             <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
                     </div>
                     <div class="profl_tfence1">
                         <a class="profl_tbox2b" href="tincearth_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/totido/ttmab/4.r2.leonorcoelho/capa.jpg)"></div>
+                        <div class="profl_timg2" style="background-image:url(css/img/totido/ttmab/4.r2.leonorcoelho/capa.jpg);"></div>
                             <div class="profl_ttitl">A tiny pea called Earth</div>
                             <div class="profl_ttxt">Cartazes</div>
                         </a>
