--- a/mafldcintra.html
+++ b/mafldcintra.html
@@ -65,14 +65,14 @@
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
                         <a class="profl_tbox1a" href="brechwall_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/gf/2.r1r2.mafaldacintra/r1/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/gf/2.r1r2.mafaldacintra/r1/capa.jpg)"></div>
                             <div class="profl_ttitl">Breaching the Wall</div>
                             <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
                     </div>
                     <div class="profl_tfence1">
                         <a class="profl_tbox2b" href="dielubermau_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/TOTIDO/gf/2.r1r2.mafaldacintra/r2/capa.jpg)"></div>
+                        <div class="profl_timg2" style="background-image: url(css/img/totido/gf/2.r1r2.mafaldacintra/r2/capa.jpg)"></div>
                             <div class="profl_ttitl">Die Erste Lucke In Der Berliner Mauer</div>
                             <div class="profl_ttxt">Cartazes</div>
                         </a>
