--- a/mafldmota.html
+++ b/mafldmota.html
@@ -65,14 +65,14 @@
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
                         <a class="profl_tbox1a" href="spacerace_proj.html">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/ttmab/2.r1r2.mafaldamota/r1/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/ttmab/2.r1r2.mafaldamota/r1/capa.jpg)"></div>
                             <div class="profl_ttitl">Space Race</div>
                             <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
                     </div>
                     <div class="profl_tfence1">
                         <a class="profl_tbox1a" href="teahland_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/ttmab/2.r1r2.mafaldamota/r2/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/ttmab/2.r1r2.mafaldamota/r2/capa.jpg)"></div>
                             <div class="profl_ttitl">The Eagle has landed</div>
                             <div class="profl_ttxt">Cartazes</div>
                         </a>
