--- a/martantunes.html
+++ b/martantunes.html
@@ -60,12 +60,12 @@
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
                         <a class="profl_tbox1a" href="log_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/wec/5.logg/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/wec/5.logg/capa.jpg)"></div>
                             <div class="profl_ttitl">LOG</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
                         <a class="profl_tbox1a" href="jfktmyth_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/gf/6.r1.martaantunes/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/gf/6.r1.martaantunes/capa.jpg)"></div>
                             <div class="profl_ttitl">JFK, Tragedy, Myth</div>
                             <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
