--- a/proj.html
+++ b/proj.html
@@ -204,7 +204,7 @@
                     </div>
                     <div class="proj_tfence1">
                         <a class="proj_tbox2c" href="unarchive_proj.html" target="_self">
-                        <div class="proj_timg2" style="background-image: url(css/img/totido/wl/5.unarchive/capa.jpg)"></div>
+                        <div class="proj_timg2" style="background-image: url(css/img/totido/wl/5.unarchive/capa.jpg);"></div>
                             <div class="proj_ttitl">Un Archive</div>
                             <div class="proj_ttxt">Publicação Periódica</div>
                         </a>
@@ -214,31 +214,31 @@
                 <div class="proj_tplaygrnd1">
                     <div class="proj_tfence1">
                         <a class="proj_tbox1b" href="twec60_proj.html" target="_self">
-                        <div class="proj_timg1" style="background-image: url(css/img/TOTIDO/wec/1.r1.leonorcoelho/capa.jpg)"></div>
+                        <div class="proj_timg1" style="background-image: url(css/img/totido/wec/1.r1.leonorcoelho/capa.jpg)"></div>
                             <div class="proj_ttitl">The Whole Earth Catalogue<br><p style="font-size:80%;margin-bottom:0;">a.k.a the 60’s bible</p></div>
                             <div class="proj_ttxt">Cartaz Desdobrável</div>
                         </a>
                         <a class="proj_tbox1a" href="contnm_proj.html" target="_self">
-                        <div class="proj_timg1" style="background-image: url(css/img/TOTIDO/wec/2.continuum/capa.jpg)"></div>
+                        <div class="proj_timg1" style="background-image: url(css/img/totido/wec/2.continuum/capa.jpg)"></div>
                             <div class="proj_ttitl">Continuum</div>
                             <div class="proj_ttxt">Publicação Periódica</div>
                         </a>
                     </div>
                     <div class="proj_tfence1">
                         <a class="proj_tbox2b" href="bein_proj.html">
-                        <div class="proj_timg2" style="background-image: url(css/img/TOTIDO/wec/3.bein/capa.jpg)"></div>
+                        <div class="proj_timg2" style="background-image: url(css/img/totido/wec/3.bein/capa.jpg)"></div>
                             <div class="proj_ttitl">BE-IN</div>
                             <div class="proj_ttxt">Publicação Periódica</div>
                         </a>
                         <a class="proj_tbox1d" href="suffix_proj.html" target="_self">
-                        <div class="proj_timg1" style="background-image: url(css/img/TOTIDO/wec/4.suffix/capa.jpg)"></div>
+                        <div class="proj_timg1" style="background-image: url(css/img/totido/wec/4.suffix/capa.jpg)"></div>
                             <div class="proj_ttitl">Suffix</div>
                             <div class="proj_ttxt">Publicação Periódica</div>
                         </a>
                     </div>
                     <div class="proj_tfence1">
                         <a class="proj_tbox1c" href="log_proj.html" target="_self">
-                        <div class="proj_timg2" style="background-image: url(css/img/TOTIDO/wec/5.logg/capa.jpg)"></div>
+                        <div class="proj_timg2" style="background-image: url(css/img/totido/wec/5.logg/capa.jpg)"></div>
                             <div class="proj_ttitl">LOG</div>
                             <div class="proj_ttxt">Publicação Periódica</div>
                         </a>
@@ -248,31 +248,31 @@
                 <div class="proj_tplaygrnd1">
                     <div class="proj_tfence1">
                         <a class="proj_tbox1c" href="laplage_kevferreira_proj.html" target="_self">
-                        <div class="proj_timg1" style="background-image: url(css/img/TOTIDO/m68/1.r2.kevin/capa.jpg)"></div>
+                        <div class="proj_timg1" style="background-image: url(css/img/totido/m68/1.r2.kevin/capa.jpg)"></div>
                             <div class="proj_ttitl">Sous les pavés, la plage!</div>
                             <div class="proj_ttxt">Cartazes</div>
                         </a>
                         <a class="proj_tbox1a" href="laplage_carlcouto_proj.html" target="_self">
-                        <div class="proj_timg1" style="background-image: url(css/img/TOTIDO/m68/2.r1.carolinacouto/capa.jpg)"></div>
+                        <div class="proj_timg1" style="background-image: url(css/img/totido/m68/2.r1.carolinacouto/capa.jpg)"></div>
                             <div class="proj_ttitl">Sous les pavés, la plage!</div>
                             <div class="proj_ttxt">Cartaz Desdobrável</div>
                         </a>
                     </div>
                     <div class="proj_tfence1">
                         <a class="proj_tbox2a" href="ensorev_proj.html" target="_self">
-                        <div class="proj_timg2" style="background-image: url(css/img/TOTIDO/m68/3.ensaiosobreumarevolucao/capa.jpg)"></div>
+                        <div class="proj_timg2" style="background-image: url(css/img/totido/m68/3.ensaiosobreumarevolucao/capa.jpg)"></div>
                             <div class="proj_ttitl">Ensaio sobre a Revolução</div>
                             <div class="proj_ttxt">Publicação Periódica</div>
                         </a>
                         <a class="proj_tbox1c" href="orla_proj.html" target="_self">
-                        <div class="proj_timg1" style="background-image: url(css/img/TOTIDO/m68/4.orla/capa.jpg)"></div>
+                        <div class="proj_timg1" style="background-image: url(css/img/totido/m68/4.orla/capa.jpg)"></div>
                             <div class="proj_ttitl">ORLA</div>
                             <div class="proj_ttxt">Publicação Periódica</div>
                         </a>
                     </div>
                     <div class="proj_tfence1">
                         <a class="proj_tbox2b" href="stimulus_proj.html" target="_self">
-                        <div class="proj_timg2" style="background-image: url(css/img/TOTIDO/m68/5.stimulus/capa.jpg)"></div>
+                        <div class="proj_timg2" style="background-image: url(css/img/totido/m68/5.stimulus/capa.jpg)"></div>
                             <div class="proj_ttitl">Stimulus</div>
                             <div class="proj_ttxt">Publicação Periódica</div>
                         </a>
@@ -282,49 +282,49 @@
                 <div class="proj_tplaygrnd2">
                     <div class="proj_tfence2">
                         <a class="proj_tbox1c" href="ichbeber_proj.html" target="_self">
-                        <div class="proj_timg1" style="background-image: url(css/img/TOTIDO/gf/1.r1r2.beatrizsapata/r1/capa.jpg)"></div>
+                        <div class="proj_timg1" style="background-image: url(css/img/totido/gf/1.r1r2.beatrizsapata/r1/capa.jpg)"></div>
                             <div class="proj_ttitl">Ich Bin Ein Berliner</div>
                             <div class="proj_ttxt">Cartaz Desdobrável</div>
                         </a>
                         <a class="proj_tbox1d" href="cryfrdm_proj.html" target="_self">
-                        <div class="proj_timg1" style="background-image: url(css/img/TOTIDO/gf/1.r1r2.beatrizsapata/r2/capa.jpg)"></div>
+                        <div class="proj_timg1" style="background-image: url(css/img/totido/gf/1.r1r2.beatrizsapata/r2/capa.jpg)"></div>
                             <div class="proj_ttitl">A Cry For Freedom</div>
                             <div class="proj_ttxt">Cartazes</div>
                         </a>
                         <a class="proj_tbox2b" href="brechwall_proj.html" target="_self">
-                        <div class="proj_timg2" style="background-image: url(css/img/TOTIDO/gf/2.r1r2.mafaldacintra/r1/capa.jpg)"></div>
+                        <div class="proj_timg2" style="background-image: url(css/img/totido/gf/2.r1r2.mafaldacintra/r1/capa.jpg)"></div>
                             <div class="proj_ttitl">Breaching the Wall</div>
                             <div class="proj_ttxt">Cartaz Desdobrável</div>
                         </a>
                         <a class="proj_tbox1a" href="dielubermau_proj.html" target="_self">
-                        <div class="proj_timg1" style="background-image: url(css/img/TOTIDO/gf/2.r1r2.mafaldacintra/r2/capa.jpg)"></div>
+                        <div class="proj_timg1" style="background-image: url(css/img/totido/gf/2.r1r2.mafaldacintra/r2/capa.jpg)"></div>
                             <div class="proj_ttitl">Die Erste Lucke In Der Berliner Mauer</div>
                             <div class="proj_ttxt">Cartazes</div>
                         </a>
                     </div>
                     <div class="proj_tfence2">
                         <a class="proj_tbox2a" href="teardtw_proj.html" target="_self">
-                        <div class="proj_timg2" style="background-image: url(css/img/TOTIDO/gf/3.r1r2.davidsantos/r1/capa.jpg)"></div>
+                        <div class="proj_timg2" style="background-image: url(css/img/totido/gf/3.r1r2.davidsantos/r1/capa.jpg)"></div>
                             <div class="proj_ttitl">Tear down this wall</div>
                             <div class="proj_ttxt">Cartaz Desdobrável</div>
                         </a>
                         <a class="proj_tbox1e" href="wall_proj.html">
-                        <div class="proj_timg1" style="background-image: url(css/img/TOTIDO/gf/3.r1r2.davidsantos/r2/capa.jpg)"></div>
+                        <div class="proj_timg1" style="background-image: url(css/img/totido/gf/3.r1r2.davidsantos/r2/capa.jpg)"></div>
                             <div class="proj_ttitl">Wall</div>
                             <div class="proj_ttxt">Cartazes</div>
                         </a>
                         <a class="proj_tbox2d" href="mothttgov_proj.html" target="_self">
-                        <div class="proj_timg2" style="background-image: url(css/img/TOTIDO/gf/4.r1.leonorcarvalho/capa.jpg)"></div>
+                        <div class="proj_timg2" style="background-image: url(css/img/totido/gf/4.r1.leonorcarvalho/capa.jpg)"></div>
                             <div class="proj_ttitl">Mother should I trust the Government?</div>
                             <div class="proj_ttxt">Cartaz Desdobrável</div>
                         </a>
                         <a class="proj_tbox1f" href="nothrha_proj.html" target="_self">
-                        <div class="proj_timg1" style="background-image: url(css/img/TOTIDO/gf/5.r1.tiagomarinho/capa.jpg)"></div>
+                        <div class="proj_timg1" style="background-image: url(css/img/totido/gf/5.r1.tiagomarinho/capa.jpg)"></div>
                             <div class="proj_ttitl">Nothing Really Happened</div>
                             <div class="proj_ttxt">Cartaz Desdobrável</div>
                         </a>
                         <a class="proj_tbox2a" href="jfktmyth_proj.html" target="_self">
-                        <div class="proj_timg2" style="background-image: url(css/img/TOTIDO/gf/6.r1.martaantunes/capa.jpg)"></div>
+                        <div class="proj_timg2" style="background-image: url(css/img/totido/gf/6.r1.martaantunes/capa.jpg)"></div>
                             <div class="proj_ttitl">JFK, Tragedy, Myth</div>
                             <div class="proj_ttxt">Cartaz Desdobrável</div>
                         </a>
@@ -334,34 +334,34 @@
                 <div class="proj_tplaygrnd2">
                     <div class="proj_tfence2">
                         <a class="proj_tbox1c" href="walkotmoon_proj.html" target="_self">
-                        <div class="proj_timg1" style="background-image: url(css/img/TOTIDO/ttmab/1.r1r2.antoniosantiago/r1/capa.jpg)"></div>
+                        <div class="proj_timg1" style="background-image: url(css/img/totido/ttmab/1.r1r2.antoniosantiago/r1/capa.jpg)"></div>
                             <div class="proj_ttitl">Walk on the Moon</div>
                             <div class="proj_ttxt">Cartaz Desdobrável</div>
                         </a>
                         <a class="proj_tbox1d" href="uumoon_proj.html" target="_self">
-                        <div class="proj_timg1" style="background-image: url(css/img/TOTIDO/ttmab/1.r1r2.antoniosantiago/r2/capa.jpg)"></div>
+                        <div class="proj_timg1" style="background-image: url(css/img/totido/ttmab/1.r1r2.antoniosantiago/r2/capa.jpg)"></div>
                             <div class="proj_ttitl">USSR, USA and the Moon</div>
                             <div class="proj_ttxt">Cartazes</div>
                         </a>
                         <a class="proj_tbox2b" href="spacerace_proj.html" target="_self">
-                        <div class="proj_timg2" style="background-image: url(css/img/TOTIDO/ttmab/2.r1r2.mafaldamota/r1/capa.jpg)"></div>
+                        <div class="proj_timg2" style="background-image: url(css/img/totido/ttmab/2.r1r2.mafaldamota/r1/capa.jpg)"></div>
                             <div class="proj_ttitl">Space Race</div>
                             <div class="proj_ttxt">Cartaz Desdobrável</div>
                         </a>
                         <a class="proj_tbox1a" href="teahland_proj.html" target="_self">
-                        <div class="proj_timg1" style="background-image: url(css/img/TOTIDO/ttmab/2.r1r2.mafaldamota/r2/capa.jpg)"></div>
+                        <div class="proj_timg1" style="background-image: url(css/img/totido/ttmab/2.r1r2.mafaldamota/r2/capa.jpg)"></div>
                             <div class="proj_ttitl">The Eagle has landed</div>
                             <div class="proj_ttxt">Cartazes</div>
                         </a>
                     </div>
                     <div class="proj_tfence2">
                         <a class="proj_tbox2a" href="apollfr1_proj.html" target="_self">
-                        <div class="proj_timg2" style="background-image: url(css/img/TOTIDO/ttmab/3.r1r2.catarinaserafim/r1/capa.jpg)"></div>
+                        <div class="proj_timg2" style="background-image: url(css/img/totido/ttmab/3.r1r2.catarinaserafim/r1/capa.jpg)"></div>
                             <div class="proj_ttitl">Apollo 11: da Ficção à Realidade<br><p style="font-size:80%;margin-bottom:0;">(parte 1)</p></div>
                             <div class="proj_ttxt">Cartaz Desdobrável</div>
                         </a>
                         <a class="proj_tbox1e"href="apollfr2_proj.html" target="_self">
-                        <div class="proj_timg1" style="background-image: url(css/img/TOTIDO/ttmab/3.r1r2.catarinaserafim/r2/capa.jpg)"></div>
+                        <div class="proj_timg1" style="background-image: url(css/img/totido/ttmab/3.r1r2.catarinaserafim/r2/capa.jpg)"></div>
                             <div class="proj_ttitl">Apollo 11:da Ficção à Realidade<br><p style="font-size:80%;margin-bottom:0;">(parte 2)</p></div>
                             <div class="proj_ttxt">Cartazes</div>
                         </a>
