--- a/sarjorge.html
+++ b/sarjorge.html
@@ -72,7 +72,7 @@
                     </div>
                     <div class="profl_tfence1">
                         <a class="profl_tbox2b" href="orla_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/TOTIDO/m68/4.orla/capa.jpg)"></div>
+                        <div class="profl_timg2" style="background-image: url(css/img/totido/m68/4.orla/capa.jpg)"></div>
                             <div class="profl_ttitl">ORLA</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
