--- a/tgmarinho.html
+++ b/tgmarinho.html
@@ -72,7 +72,7 @@
                     </div>
                     <div class="profl_tfence1">
                         <a class="profl_tbox2b" href="nothrha_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/TOTIDO/gf/5.r1.tiagomarinho/capa.jpg)"></div>
+                        <div class="profl_timg2" style="background-image: url(css/img/totido/gf/5.r1.tiagomarinho/capa.jpg)"></div>
                             <div class="profl_ttitl">Nothing Really Happened</div>
                             <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
