--- a/anacsantos.html
+++ b/anacsantos.html
@@ -60,7 +60,7 @@
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
                         <a class="profl_tbox1a" href="slur_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/wl/4.slur/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/wl/4.slur/capa.jpg)"></div>
                             <div class="profl_ttitl">Slur</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
