--- a/catcorreia.html
+++ b/catcorreia.html
@@ -60,7 +60,7 @@
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
                         <a class="profl_tbox1a" href="suffix_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/wec/4.suffix/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/wec/4.suffix/capa.jpg)"></div>
                             <div class="profl_ttitl">Suffix</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
