--- a/catserafim.html
+++ b/catserafim.html
@@ -60,7 +60,7 @@
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
                         <a class="profl_tbox1a" href="apollfr1_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/ttmab/3.r1r2.catarinaserafim/r1/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/ttmab/3.r1r2.catarinaserafim/r1/capa.jpg)"></div>
                             <div class="profl_ttitl">Apollo 11: da Ficção à Realidade<br><p style="font-size:80%;margin-bottom:0;">(parte 1)</div>
                             <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
@@ -72,7 +72,7 @@
                     </div>
                     <div class="profl_tfence1" href="nomma_proj.html" target="_self">
                         <a class="profl_tbox2b" href="nomma_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/TOTIDO/wl/3.nomoremissamerica/capa.jpg)"></div>
+                        <div class="profl_timg2" style="background-image: url(css/img/totido/wl/3.nomoremissamerica/capa.jpg)"></div>
                             <div class="profl_ttitl">No more Miss America</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
