--- a/inssobral.html
+++ b/inssobral.html
@@ -65,7 +65,7 @@
                             <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
                         <a class="profl_tbox1a" href="orla_proj.html">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/m68/4.orla/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/m68/4.orla/capa.jpg)"></div>
                             <div class="profl_ttitl">ORLA</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
