--- a/joalourenco.html
+++ b/joalourenco.html
@@ -60,7 +60,7 @@
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
                         <a class="profl_tbox1a" href="ensorev_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/m68/3.ensaiosobreumarevolucao/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/m68/3.ensaiosobreumarevolucao/capa.jpg)"></div>
                             <div class="profl_ttitl">Ensaio sobre a Revolução</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
