--- a/leocarvalho.html
+++ b/leocarvalho.html
@@ -65,14 +65,14 @@
                             <div class="profl_ttxt">Cartazes</div>
                         </a>
                         <a class="profl_tbox1a" href="aura_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/mbp/11.aura/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/mbp/11.aura/capa.jpg)"></div>
                             <div class="profl_ttitl">Aura: ecos de<br>r-evolução</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
                     </div>
                     <div class="profl_tfence1">
                         <a class="profl_tbox2b" href="mothttgov_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/TOTIDO/gf/4.r1.leonorcarvalho/capa.jpg)"></div>
+                        <div class="profl_timg2" style="background-image: url(css/img/totido/gf/4.r1.leonorcarvalho/capa.jpg)"></div>
                             <div class="profl_ttitl">Mother should I trust the Government?</div>
                             <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
