--- a/rodrsilva.html
+++ b/rodrsilva.html
@@ -60,7 +60,7 @@
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
                         <a class="profl_tbox1a" href="unarchive_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/TOTIDO/wl/5.unarchive/capa.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/wl/5.unarchive/capa.jpg)"></div>
                             <div class="profl_ttitl">Un Archive</div>
                             <div class="profl_ttxt">Publicação Periódica</div>
                         </a>
