--- a/ichbeber_proj.html
+++ b/ichbeber_proj.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="slideshow-container">
-                <img src="css/img/totido/gf/1.r1r2.beatrizsapata/r1/capa.jpg" style="width:100%">
+                <img src="css/img/totido/gf/1.r1r2.beatrizsapata/r1/beatriz_sapata_web.jpg" style="width:100%">
             </div>
         </div>
         <div id="foot">
